fixed css spacing error

--- a/css/_global.scss
+++ b/css/_global.scss
@@ -114,6 +114,7 @@ body{
 	width: 90%;
 	margin: 0 5% 2%;
 	padding-top: 5px;
+	float: left;
 }
 
 .percentage::after
@@ -131,7 +132,9 @@ font-size: 1em;
 
 .category-progress-container{
 	height: 1em;
-	width: 95%;
+	width: 90%;
+	margin: 0 5%;
+	float: left;
 	background-color: $background-color;
 }
 
