--- a/css/styles.css
+++ b/css/styles.css
@@ -214,7 +214,8 @@ body {
 .category-name {
   width: 90%;
   margin: 0 5% 2%;
-  padding-top: 5px; }
+  padding-top: 5px;
+  float: left; }
 
 .percentage::after {
   content: "+";
@@ -228,7 +229,9 @@ body {
 
 .category-progress-container {
   height: 1em;
-  width: 95%;
+  width: 90%;
+  margin: 0 5%;
+  float: left;
   background-color: #fffbf0; }
 
 .category-progress {
